--- a/vue-invoice-app/package.json
+++ b/vue-invoice-app/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "sass": "^1.54.8",
+    "sass-loader": "^13.0.2",
     "uid": "^2.0.0",
     "vue": "^3.2.13",
-    "vue-awesome": "^4.5.0",
     "vue-router": "^4.1.5",
+    "vue-unicons": "^3.3.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
