--- a/vue-invoice-app/package.json
+++ b/vue-invoice-app/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.9.4",
     "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
     "uid": "^2.0.0",
+    "vee-validate": "^4.6.7",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
     "vue-unicons": "^3.3.1",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
